Add implicit remoting module example

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -13,6 +13,7 @@
 			],
 			"settings": {
 				"dotnet.defaultSolution": "PSConfEU-2025.slnx",
+				"pester.runTestsInNewProcess": true,
 				"powershell.pester.codeLens": false,
 				"powershell.pester.useLegacyCodeLens": false
 			}
